[package]
name = "mpsse"
version = "0.3.0"
authors = ["Nanashi Mitame <gitcommits@mita.me>"]
edition = "2018"
license = "MPL-2.0"
description = "Build MPSSE commands for FTDI modules"
repository = "https://git.mita.me/Mitame/mpsse-rs"
documentation = "https://docs.rs/mpsse-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
